fix: make search, filters and dropdow icons visible

--- a/src/header/__SearchButton/SearchButton.scss
+++ b/src/header/__SearchButton/SearchButton.scss
@@ -7,5 +7,5 @@ $button-width: 32px;
   background-color: transparent;
   width: $button-width;
   height: $button-width;
-  background-image: url("icons/search.svg");
+  background-image: url("/icons/search.svg");
 }
