--- a/src/header/__SearchWrapper/__Search/Search.scss
+++ b/src/header/__SearchWrapper/__Search/Search.scss
@@ -24,7 +24,7 @@ $border-radius: 16px;
     border: none;
     width: $ico-width;
     height: $ico-width;
-    background: url("icons/search-pale.svg") no-repeat;
+    background: url("/icons/search-pale.svg") no-repeat;
   }
 
   &__search-ico {
