--- a/src/pages/catalog/filters&sorting/filters/Filters.scss
+++ b/src/pages/catalog/filters&sorting/filters/Filters.scss
@@ -7,6 +7,6 @@
     display: block;
     width: 32px;
     height: 32px;
-    background: url("icons/filters-icon.svg") no-repeat;
+    background: url("/icons/filters-icon.svg") no-repeat;
   }
 }
