--- a/src/pages/catalog/filters&sorting/sorting/Sorting.scss
+++ b/src/pages/catalog/filters&sorting/sorting/Sorting.scss
@@ -38,5 +38,5 @@
 .dropdown-arrow {
   width: 12px;
   height: 18px;
-  background-image: url("icons/dropdown.svg");
+  background-image: url("/icons/dropdown.svg");
 }
